--- a/.github/workflows/adhoc.yaml
+++ b/.github/workflows/adhoc.yaml
@@ -1,3 +1,4 @@
+# Via https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#workflow_dispatch
 on:
   workflow_dispatch:
     inputs:
@@ -16,7 +17,11 @@ on:
         type: boolean
       environment:
         description: 'Environment to run tests against'
-        type: environment
+        type: string
+        required: true
+      favoriteNumber:
+        description: 'My favorite number'
+        type: number
         required: true
         
 jobs:
@@ -27,7 +32,9 @@ jobs:
           echo "Log level: $LEVEL"
           echo "Tags: $TAGS"
           echo "Environment: $ENVIRONMENT"
+          echo "Favorite Number: $FAVORITE"
         env:
           LEVEL: ${{ inputs.logLevel }}
           TAGS: ${{ inputs.tags }}
           ENVIRONMENT: ${{ inputs.environment }}
+          FAVORITE: ${{ inputs.favoriteNumber }}
